--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div id="app">
         <h1>{{ titulo }} </h1>
         <h2>Mi saldo disponible es {{ cantidad }} </h2>
+        <a v-bind:href="enlace">YOUTUBE</a>
+        <br>
+        <br>
+        <a :href="enlace">YOUTUBE</a>
     </div>
     <script src="main.js"></script>
     <script >
