--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
 <body>
     <div id="app">
         <h1>{{ titulo }} </h1>
-        <h2>Mi saldo disponible es {{ cantidad }} </h2>
+        
         <a v-bind:href="enlace">YOUTUBE</a>
         <br>
         <br>
         <a :href="enlace">YOUTUBE</a>
+        <hr>
+        
+        <h2 v-if="estado">Cuenta Activa</h2>
+        <h2>Mi saldo disponible es:</h2>
+        <h2 v-if="cantidad > 500"> Cantidad {{ cantidad }}</h2>
+        <h2 v-else-if="cantidad <= 500 && cantidad > 0">
+            Cantidad: 
+            <span style="color:red">{{cantidad }}</span>
+        </h2>
     </div>
     <script src="main.js"></script>
     <script >
