--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <ul>
             <li v-for="(item, index) in servicios" :key="index"> {{ index+1 }} - {{ item }}</li>
         </ul>
+        <button v-on:click="agregarSaldo">Agregar saldo</button>
+        <button @click="agregarSaldo">Agregar saldo</button>
     </div>
     <script src="main.js"></script>
     <script >
