--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <title>Mi primer proyecto con Vue 3!</title>
     <!-- CDN vue 3 -->
     <script src="https://unpkg.com/vue@next"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="app">
         <h1>{{ titulo }} </h1>
-        
+        <h2
+            class="bg-dark text-success"
+            :class="[cantidad > 500 ? 'text-success' : 'text-danger']"
+        >
+            Mi saldo disponible es {{cantidad}}
+        </h2>
         <a v-bind:href="enlace">YOUTUBE</a>
         <br>
         <br>
