--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div id="app">
-        <h1>{{ titulo }} </h1>
+        <h1>{{ mayusculasTexto }} </h1>
         <h2
             class="bg-dark text-success"
-            :class="[cantidad > 500 ? 'text-success' : 'text-danger']"
+            :class="colorCantidad"
         >
             Mi saldo disponible es {{cantidad}}
         </h2>
