props. pasar datos entre componentes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <button @click="agregarSaldo"  >Agregar saldo</button>
         <button @click="disminuirSaldo(50)" :disabled="desactivar" >Disminuir saldo</button>
 
-        <footer-banco></footer-banco>
+        <footer-banco
+            cantidad="700"
+            fecha="04-02-2021"
+        ></footer-banco>
         <footer-banco />
     </div>
     <script src="main.js"></script>
