--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <!-- CDN vue 3 -->
     <script src="https://unpkg.com/vue@next"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="app">
@@ -41,10 +40,9 @@
         <button @click="disminuirSaldo(50)" :disabled="desactivar" >Disminuir saldo</button>
 
         <footer-banco
-            cantidad="700"
+            :valor="cantidad"
             fecha="04-02-2021"
-        ></footer-banco>
-        <footer-banco />
+        />
     </div>
     <script src="main.js"></script>
     <script src="src/components/footer.js"></script>
